--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,13 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+section {
+  padding: 0rem 2.5rem;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
 }
+
